==> salman-tech1/Interprocessor_Communication_UART/stm32/Core/Src/frame_.c <==
#include "main.h"
#include <string.h>
#include <stdbool.h>
#include <stdio.h>
#include "com.h"
#include "retarget.h"
#define PACKET_PARSE_TIMEOUT 2000	// Mid Frame Silence Timeout
#define FRAME_RESPONSE_TIMEOUT 3000 // no response at all timeout
#define PAYLOAD_SIZE 200 //  bytes
#define FRAME_HEADER_SIZE 5U // syn1 + syn2 + len + seq + cmd
#define FRAME_CRC_SIZE 2U	 // 16bit crc = crc && 0xff | crc >> 8
#define FRAME_SIZE (FRAME_HEADER_SIZE + PAYLOAD_SIZE + FRAME_CRC_SIZE)
#define SYNC0 0x55
#define SYNC1 0xAA
#define MAX_RETRIES 3
#define CMD_REQ_LED_NUM 0x10
#define CMD_RES_LED_NUM 0x11
#define CMD_REQ_DELAY 0x20
#define CMD_RES_DELAY 0x21
#define CMD_HEART_BEAT_REQ 0x30
#define CMD_HEART_BEAT_RES 0x31

void format_packet(const uint8_t *const data, uint8_t len, uint8_t seq,
				   uint8_t cmd)
{

	if ((data == NULL && len > 0) || len > PAYLOAD_SIZE || packet_formatted == true)
	{
		HAL_UART_Transmit(&huart2, (uint8_t *)"format_packet\r\n",
						  strlen("format_packet\r\n"), 0xff);
		return;
	}

	tx_idx = 0;
	// Build the frame :
	txbuff[tx_idx++] = SYNC0; // 0x55
	txbuff[tx_idx++] = SYNC1; // 0xAA
	txbuff[tx_idx++] = len;	  // length of payload
	txbuff[tx_idx++] = cmd;	  // command
	txbuff[tx_idx++] = seq;	  // command

	// check the len
	if (len > 0)
	{
		// copy the pay load that we are going to send
		memcpy(&txbuff[tx_idx], data, len);
		tx_idx += len; // move the offset
	}

	//
	uint16_t crc_ = calculate_crc16(txbuff, tx_idx);

	// place lsb first than msb
	txbuff[tx_idx++] = (crc_ & 0xff);
	txbuff[tx_idx++] = (crc_ >> 8);

	// packet formated
	packet_formatted = true;
}

void packet_send()
{

	// if packet is not formatted we need to look
	if (packet_formatted != true || tx_idx < (FRAME_HEADER_SIZE + FRAME_CRC_SIZE))
	{
		HAL_UART_Transmit(&huart2, (uint8_t *)"packet_send\r\n",
						  strlen("packet_send\r\n"), 0xff);
		return;
	}

	// write the data : we used the tx_idx as the length for the com write function
	com.write(txbuff, tx_idx);

	// reset the packet sending
	tx_idx = 0;
	packet_formatted = false;
	memset(txbuff, 0, FRAME_SIZE);
}

void frame_retransmit()
{
	com.write(frm.rt_buff, frm.rt_len);
	frm.response_time = HAL_GetTick(); // restart the timer for another timeout
}
